# longscope-backend

./: .gitignore  381-API.py  381-CSV.py  API.py  CSV.py  README.md  api_core.py  charts_meta.json  constants.py  csv_core.py  docker-compose.yml  engine.py  plot.py  pyproject.toml
data/: 381-data.csv  charts_config.json
docker/celery/: Dockerfile
docker/pocketbase/: Dockerfile
scripts/: fetch_nbp_usd.py
src/longscope/: api_core.py  constants.py  csv_core.py  engine.py  plot.py
src/longscope/raw_data/: __init__.py  model.py  nbp.py
